👔 status code 변경 204 -> 404
