# user/adatper/controller/read_info.go
@@ -14,10 +14,10 @@ import (
 // @Produce json
 // @Param user_key path string true "user key"
 // @Success 200 {object} dto.ReadUserInfo
-// @Success 204 {string} no content
 // @Failure 400 {string} token validation error
 // @Failure 401 {string} authentication error
 // @Failure 403 {string} authorization error
+// @Failure 404 {string} not found error
 // @Failure 422 {string} input param error
 // @Failure 500 {string} internal servier error
 // @Router /info/{user_key} [get]
