# user/docs/swagger.json
@@ -82,12 +82,6 @@
                             "$ref": "#/definitions/dto.ReadUserInfo"
                         }
                     },
-                    "204": {
-                        "description": "No Content",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -102,6 +96,12 @@
                     },
                     "403": {
                         "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "type": "string"
                         }
